--- a/my_syt/zakaz.html
+++ b/my_syt/zakaz.html
@@ -20,7 +20,7 @@
    <div class="conteiner">
        <div class="row">
            <div class="col-lg-offset-3 col-lg-6">
-               <form class="form" action="//formspree.io/get_better1@mail.ru" method="post">
+               <form class="form" action="//formspree.io/poznaniy996@mail.ru" method="post">
   <div class="form-group">
     <label for="exampleInputName2">Имя</label>
     <input type="text" class="form-control" id="exampleInputName2" name="name"    placeholder="Ваше имя">
@@ -38,7 +38,7 @@
     
     <input type="text" name="_gotcha" style="display: none" />
   </div>
-  <button type="submit" href="oplata.html" class="btn btn-default">Отправить</button>
+  <button type="submit" class="btn btn-default">Отправить</button>
 </form>
            </div>
        </div>
