--- a/my_syt/zakaz.html
+++ b/my_syt/zakaz.html
@@ -30,10 +30,10 @@
     <input type="email" class="form-control" name="email" id="exampleInputEmail2" placeholder="Ваша почта">
     <div class="form-group">
     <label for="exampleInputName3">Услуга</label><br>
-    <input type="radio"   id="exampleInputName2" name="usluga"    value="tm">Тренировка на набор мышечной массы<br>
-    <input type="radio"  id="exampleInputName2" name="usluga"    value="ts">Тренировка на похудение<br>
-    <input type="radio"class="us"  id="exampleInputName2" name="usluga"    value="tm">Питпние на набор мышечной массы<br>
-    <input type="radio"  id="exampleInputName2" name="usluga"    value="tm">Питание на похудение<br>
+    <input type="radio"   id="exampleInputName2" name="usluga"    value="тренировка на набор мышц">Тренировка на набор мышечной массы<br>
+    <input type="radio"  id="exampleInputName2" name="usluga"    value="тренировка на похудение">Тренировка на похудение<br>
+    <input type="radio"class="us"  id="exampleInputName2" name="usluga"    value="питание на мышцы">Питпние на набор мышечной массы<br>
+    <input type="radio"  id="exampleInputName2" name="usluga"    value="питание на похудение">Питание на похудение<br>
   </div>
     
     <input type="text" name="_gotcha" style="display: none" />
