--- a/my_syt/zakaz.html
+++ b/my_syt/zakaz.html
@@ -20,7 +20,7 @@
    <div class="conteiner">
        <div class="row">
            <div class="col-lg-offset-3 col-lg-6">
-               <form class="form" action="//formspree.io/poznaniy996@mail.ru" method="post">
+               <form class="form" action="//formspree.io/poznaniy996@mail.ru" method="POST">
   <div class="form-group">
     <label for="exampleInputName2">Имя</label>
     <input type="text" class="form-control" id="exampleInputName2" name="name"    placeholder="Ваше имя">
@@ -29,11 +29,11 @@
     <label for="exampleInputEmail2">Почта</label>
     <input type="email" class="form-control" name="email" id="exampleInputEmail2" placeholder="Ваша почта">
     <div class="form-group">
-    <label for="exampleInputName3">Услуга</label><br>
-    <input type="radio"   id="exampleInputName2" name="usluga"    value="тренировка на набор мышц">Тренировка на набор мышечной массы<br>
-    <input type="radio"  id="exampleInputName2" name="usluga"    value="тренировка на похудение">Тренировка на похудение<br>
-    <input type="radio"class="us"  id="exampleInputName2" name="usluga"    value="питание на мышцы">Питпние на набор мышечной массы<br>
-    <input type="radio"  id="exampleInputName2" name="usluga"    value="питание на похудение">Питание на похудение<br>
+    <label for="exampleInputName2">Услуга</label><br>
+    <input type="radio"   id="exampleInputName2" name="usluga"    value="tm">Тренировка на набор мышечной массы<br>
+    <input type="radio"  id="exampleInputName2" name="usluga"    value="ts">Тренировка на похудение<br>
+    <input type="radio"class="us"  id="exampleInputName2" name="usluga"    value="tm">Питпние на набор мышечной массы<br>
+    <input type="radio"  id="exampleInputName2" name="usluga"    value="tm">Питание на похудение<br>
   </div>
     
     <input type="text" name="_gotcha" style="display: none" />
