--- a/my_syt/index.html
+++ b/my_syt/index.html
@@ -9,6 +9,7 @@
     </head>
 <body>
     <header>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <div class="wrapper">
        <div class="conteiner1">
            <a href="#"><div class="logo1"></div></a>
