--- a/my_syt/index.html
+++ b/my_syt/index.html
@@ -36,6 +36,7 @@
         }
       })();
     </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
   <link rel="icon" href="galea-centurion-trojans.ico" type="images/x-icon">
      <link rel="stylesheet" href="sport.css" type="text/css">
