--- a/my_syt - копия/kontakty.html
+++ b/my_syt - копия/kontakty.html
@@ -19,7 +19,7 @@
    <b class="nazw3">Напиши нам</b>
    <p class="nazw3_1">Пиши. Не стесняйся.</p>
    <p class="nazw3_2">get_better1@mail.ru</p>
-   <a href="sport.html"><div class="kn_gl">На главную</div></a>
+   <a href="index.html"><div class="kn_gl">На главную</div></a>
     </div>  
 </body>
 </html>
