--- a/my_syt - копия/nowosty.html
+++ b/my_syt - копия/nowosty.html
@@ -12,7 +12,7 @@
    <p class="nazw1"> Новости </p>
    <p class="nazw2">C 1 июля по 15 августа всем кто оформит заказ предоставляется скидка в 40%</p>
    <p class="nazw3">Закажи тренировку и питание и получи скидку в 30%</p>
-   <a href="sport.html"><div class="kn_gl">На главную</div></a>
+   <a href="index.html"><div class="kn_gl">На главную</div></a>
    </div>
 </body>
 </html>
