--- a/proba/index.html
+++ b/proba/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
   <link rel="icon" href="galea-centurion-trojans.ico" type="images/x-icon">
      <link rel="stylesheet" href="sport.css" type="text/css">
-    <link rel="stylesheet" href="sport_adaptation.css" type="text/css">
+    <link rel="stylesheet" href="sport_adaptation1.css" type="text/css">
     <title>Развитие </title>
     </head>
 <body>
