--- a/proba/index.html
+++ b/proba/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
   <link rel="icon" href="galea-centurion-trojans.ico" type="images/x-icon">
-     <link rel="stylesheet" href="sport.css" type="text/css">
+     <link rel="stylesheet" href="sport1.css" type="text/css">
     <link rel="stylesheet" href="sport_adaptation1.css" type="text/css">
     <title>Развитие </title>
     </head>
