--- a/adaptation/massa.html
+++ b/adaptation/massa.html
@@ -3,8 +3,8 @@
 <head>
     <link rel="icon" href="galea-centurion-trojans.ico" type="images/x-icon">
     <meta charset="UTF-8">
-     <link rel="stylesheet" href="massa.css" type="text/css">
-      <link rel="stylesheet" href="massa_adaptation.css" type="text/css">
+     <link rel="stylesheet" href="massa2.css" type="text/css">
+      <link rel="stylesheet" href="massa_adaptation2.css" type="text/css">
     <title>Масса</title>
 </head>
 <body>
