--- a/adaptation/massa.html
+++ b/adaptation/massa.html
@@ -15,7 +15,7 @@
     <p class="nazw1_1">Тренировка для набора мышечной массы.</p>
     <div class="foto1_1"></div>
     <p class="nazw1_2">Хочешь набрать мышечную массу? Хочешь узнать как это сделать?<br> Какие упражнения увеличивают мышечную массу? Закажи услуги<br> личного тренера и получи эти знания, и сделай тело своей мечты. </p>
-    <p class="nazw1_3">Набор мышечной массы – основная цель, которую преследует большинство<br> начинающих атлетов. Но немногим удается добиться быстрого результата, придерживаясь <br>сбалансированного питания и регулярных тренировок. Правильный набор массы сопровождается<br> соблюдением условий, без которых на достижение поставленной цели уйдет много времени и сил.</p>  
+    <p class="nazw1_3">Набор мышечной массы – основная цель, которую преследует большинство начинающих атлетов. Но немногим удается добиться быстрого результата, придерживаясь сбалансированного питания и регулярных тренировок. Правильный набор массы сопровождается соблюдением условий, без которых на достижение поставленной цели уйдет много времени и сил.</p>  
     </div>
     
     
