--- a/adaptation/suchka.html
+++ b/adaptation/suchka.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
      <link rel="icon" href="galea-centurion-trojans.ico" type="images/x-icon">
-     <link rel="stylesheet" href="suchka.css" type="text/css">
-     <link rel="stylesheet" href="suchka_adaptation.css" type="text/css">
+     <link rel="stylesheet" href="suchka2.css" type="text/css">
+     <link rel="stylesheet" href="suchka_adaptation2.css" type="text/css">
     <title>Похудение</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
     <p class="nazw1_1">Тренировка для похудения.</p>
     <div class="foto1_1"></div>
     <p class="nazw1_2">Какая программа тренировок для похудения лучше всего подходит для сжигания жира?<br> Какие упражнения самые эффективные для сжигания жира? Закажите услуги<br> личного тренера и получите эти знания и сделайте тело своей мечты. </p>
-    <p class="nazw1_3">Все хотят иметь прекрасное тело, но не каждый достигает этой цели.<br> Обычно это происходит не из-за недостатка усилий.Скорее, большинство людей <br>просто не знают, как спланировать комплекс упражнений для похудения, чтобы сжечь максимум жира.
+    <p class="nazw1_3">Все хотят иметь прекрасное тело, но не каждый достигает этой цели. Обычно это происходит не из-за недостатка усилий.Скорее, большинство людей просто не знают, как спланировать комплекс упражнений для похудения, чтобы сжечь максимум жира.
 </p>  
     </div>
     <div class="conteiner2"> 
