--- a/adaptation/pitmassa.html
+++ b/adaptation/pitmassa.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
      <link rel="icon" href="galea-centurion-trojans.ico" type="images/x-icon">
-     <link rel="stylesheet" href="pitmassa.css" type="text/css">
-      <link rel="stylesheet" href="pitmassa_adaptation.css" type="text/css">
+     <link rel="stylesheet" href="pitmassa2.css" type="text/css">
+      <link rel="stylesheet" href="pitmassa_adaptation2.css" type="text/css">
     <title>Питание</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <a href="kontakty.html" class="ob1_1">Контакты</a>     </p>
     <p class="nazw1_1">Питание для  набора мышечной массы.</p>
     <div class="foto1_1"></div>
-    <p class="nazw1_2">Обрести мощное и накаченное тело невозможно без приличной мышечной массы,<br> для набора которой необходим правильно и грамотно составленный рацион. Немаловажное<br> значение играют и тренировки, формирующие мускулатуру, но они бесполезны, если нет «материала» для работы.<br>Желающим иметь хорошую мышечную массу всегда нужно начинать с построения тщательно выверенного меню,<br> которое должно полностью совпадать с поставленными задачами и целями.<br> Закажите услуги личного тренера и получите эти знания и сделайте тело своей мечты.  </p>
+    <p class="nazw1_2">Обрести мощное и накаченное тело невозможно без приличной мышечной массы, для набора которой необходим правильно и грамотно составленный рацион. Немаловажное значение играют и тренировки, формирующие мускулатуру, но они бесполезны, если нет «материала» для работы.Желающим иметь хорошую мышечную массу всегда нужно начинать с построения тщательно выверенного меню, которое должно полностью совпадать с поставленными задачами и целями. Закажите услуги личного тренера и получите эти знания и сделайте тело своей мечты.  </p>
    
     </div>
     <div class="conteiner2"> 
