--- a/adaptation/pitsuchka.html
+++ b/adaptation/pitsuchka.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
      <link rel="icon" href="galea-centurion-trojans.ico" type="images/x-icon">
-     <link rel="stylesheet" href="pitsuchka.css" type="text/css">
-      <link rel="stylesheet" href="pitsuchka_adaptation.css" type="text/css">
+     <link rel="stylesheet" href="pitsuchka2.css" type="text/css">
+      <link rel="stylesheet" href="pitsuchka_adaptation2.css" type="text/css">
     <title>Питание</title>
 </head>
 <body>
@@ -14,8 +14,8 @@
     <a href="kontakty.html" class="ob1_1">Контакты</a>     </p>
     <p class="nazw1_1">Питание для  похудения.</p>
     <div class="foto1_1"></div>
-    <p class="nazw1_2">Если вы недавно решили избавится от лишниего жир, то вы, наверняка, много думали об этом,<br> и ждете немедленных результатов.
-    Теперь, собравшись с духом, вы рассчитываете на получение <br>стабильного видимого эффекта, который вы могли бы отслеживать еженедельно. В действительности <br>потеря веса и сжигание жира – разные вещи. Килограммы могут уходить за счет уменьшения объема воды, <br>гликогена, мышц или жира.<br>
+    <p class="nazw1_2">Если вы недавно решили избавится от лишниего жир, то вы, наверняка, много думали об этом, и ждете немедленных результатов.
+    Теперь, собравшись с духом, вы рассчитываете на получение стабильного видимого эффекта, который вы могли бы отслеживать еженедельно. В действительности потеря веса и сжигание жира – разные вещи. Килограммы могут уходить за счет уменьшения объема воды, гликогена, мышц или жира.
 Закажите услуги личного тренера и получите эти знания и сделайте тело своей мечты. 
    </p>
    
