--- a/adaptation/suchka.html
+++ b/adaptation/suchka.html
@@ -36,6 +36,7 @@
             </a></div>
     </header> 
         <a href="oplata.html"><div class="kn_oplata">Оплатить</div></a>
+        <a href="index.html"><div class="kn_gl">На главную</div></a>
     </div>
     
 </body>
