--- a/adaptation/massa.html
+++ b/adaptation/massa.html
@@ -38,6 +38,7 @@
             </a></div>
     </header> 
         <a href="oplata.html"><div class="kn_oplata">Оплатить</div></a>
+         <a href="index.html"><div class="kn_gl">На главную</div></a>
     </div>
     
 </body>
