--- a/adaptation/pitmassa.html
+++ b/adaptation/pitmassa.html
@@ -37,6 +37,7 @@
             </a></div>
     </header> 
         <a href="oplata.html"><div class="kn_oplata">Оплатить</div></a>
+         <a href="index.html"><div class="kn_gl">На главную</div></a>
     </div>
     
 </body>
