--- a/adaptation/zakaz.html
+++ b/adaptation/zakaz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
      <link rel="icon" href="galea-centurion-trojans.ico" type="images/x-icon">
      <link rel="stylesheet" href="zakaz.css"  type="text/css">
-     <link rel="stylesheet" href="zakaz_adaptation.css" type="text/css">
+     <link rel="stylesheet" href="zakaz_adaptation2.css" type="text/css">
     <title>zakaz</title>
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
